2024-02-13T16:18:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7889513680 # 113
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-13
* notice: last 14d: unq all: 1 19
* notice: prev accum: outdated-unq outdated-all / unq all: 864 1578 / 875 1599
* notice: next accum: outdated-unq outdated-all / unq all: 865 1580 / 875 1599
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-30] / []

2024-02-12T16:19:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7874704647 # 110
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-12
* notice: last 14d: unq all: 1 21
* notice: prev accum: outdated-unq outdated-all / unq all: 863 1576 / 875 1599
* notice: next accum: outdated-unq outdated-all / unq all: 864 1578 / 875 1599
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-29] / []

2024-02-11T16:17:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7863194105 # 107
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-11
* notice: last 14d: unq all: 1 23
* notice: prev accum: outdated-unq outdated-all / unq all: 862 1574 / 875 1599
* notice: next accum: outdated-unq outdated-all / unq all: 863 1576 / 875 1599
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-28] / []

2024-02-10T16:18:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7856032825 # 104