@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-13T16:18:56Z",
-  "count_outdated" : 1580,
-  "uniques_outdated" : 865,
+  "timestamp" : "2024-02-14T16:18:49Z",
+  "count_outdated" : 1582,
+  "uniques_outdated" : 866,
   "count" : 1599,
   "uniques" : 875,
   "clones" : [
-    {
-      "timestamp": "2024-01-31T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-02-01T00:00:00Z",
       "count": 2,
