@@ -1,12 +1,7 @@
 {
-  "count": 19,
+  "count": 17,
   "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2024-01-31T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-02-01T00:00:00Z",
       "count": 2,
